# rust-args-parser

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  flake.nix
benches/: parse_addons.rs  parse_scenarios.rs
examples/: 01_minimal.rs  02_flags_values.rs  03_optional_numbers.rs  04_groups.rs  05_subcommands.rs  06_env_defaults_and_help.rs  basic.rs  env_defaults.rs  git.rs  subcommands.rs  try_handlers.rs
src/: error.rs  help.rs  lib.rs  matches.rs  parse.rs  spec.rs  suggest.rs  util.rs
tests/: argv_matrix.rs  auto_flags.rs  builtins.rs  check_defaults.rs  commands.rs  common.rs  complex.rs  env_defaults.rs  flags_values.rs  general.rs  groups.rs  handler_variants.rs  help.rs  options.rs  path_help.rs  positionals.rs  root_opts_then_sub.rs  subcommands.rs  suggest.rs  suggestions.rs  usage_tokens_order.rs  utils.rs  validators.rs
tests/common/: mod.rs
