[package]
name = "rust-args-parser"
version = "2.0.0"
description = "Tiny, fast, callback-based CLI argument parser for Rust"
rust-version = "1.60"
edition = "2021"
homepage = "https://github.com/milchinskiy/rust-args-parser"
repository = "https://github.com/milchinskiy/rust-args-parser"
documentation = "https://docs.rs/rust-args-parser"
readme = "README.md"
keywords = ["cli", "command-line", "args", "parser"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"

[lints.clippy]
pedantic = "warn"
correctness = "warn"
complexity = "warn"
perf = "warn"
nursery = "warn"
style = "warn"
cargo = "warn"
redundant_pub_crate = "warn"
missing_const_for_fn = { level = "allow", priority = 1 }

[features]
default = ["help", "suggest", "color"]
help = []                              # help renderer (wrapping, sections, optional colors)
suggest = []                           # did-you-mean distance util
color = []                             # ANSI styles (opt-in); respects NO_COLOR/CLICOLOR loosely

[dependencies]

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
